<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">途牛旅游改</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tao_can_details">TaoCanDetailsActivity</string>

    <!-- 行程玩法 -->
    <string name="scheduling_head_text1">您预定完产品后,行程助手就开始工作啦~</string>
    <string name="scheduling_head_text_ifLogin">如果您有行程,请先登录</string>
    <string name="sub">—</string>
    <string name="scheduling_add">+</string>
    <string name="hainan">海南</string>
    <string name="xiamen">厦门</string>
    <string name="yunnan">云南</string>
    <string name="riben">日本</string>
    <string name="xianggang">香港</string>
    <string name="hanguo">韩国</string>
    <string name="title_activity_schedu_more">ScheduMoreActivity</string>
    <string name="schedu_more_title1">你可以根据行程或玩法选择套餐</string>
    <string name="schedu_more_title2">你也可以直接自由搭配</string>

    <!-- 行程详情 -->
    <string name="scheduling_details_tName">套餐列表</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- 登录界面 -->
    <string name="send_code">" "<u>获取验证码</u>" "</string>
    <string name="send_dynamic_code">" "<u>发送动态密码</u>" "</string>
    <string name="title_activity_home_list_detail">HomeListDetailActivity</string>
    <string name="title_activity_city">CityActivity</string>
    
    <!-- 发现界面 -->
    <string name="title_activity_jieban">JiebanActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    

</resources>
